# Train_of_Thought-Cognopolis-client

./: README.md  pyproject.toml
cognopolis_client/: __init__.py  client.py
examples/: play_to_goal.py  reactive_gatherer.py
tools/: sync_from_game_repo.sh
