[project]
name = "cognopolis-client"
version = "0.0.1"
description = "Official Python client for the Cognopolis game API."
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

# Lessons install this from the git URL (D-007); the package lives in the `client/` subdir:
#   pip install "cognopolis-client @ git+https://github.com/ITrubnikov/Train_of_Thought-Cognopolis.git#subdirectory=client"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cognopolis_client"]
